Submetendo uma parte dos testes e classes auxiliares
Além do descrito no texto, possui arquivos de configuração do Cucumber
necessários para o ambiente de todos.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@
 
 # "temporary" build files
 /target
+
+# "Arquivos extras"
+**/.idea/compiler.xml
+.idea/*.xml
+.slcache/
+grails-app/grails-app.iml
+web-app/WEB-INF/*
+*.iml
+out/*
