--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 /target
 
 # "Arquivos extras"
+.idea/
 **/.idea/compiler.xml
 .idea/*.xml
 .slcache/
@@ -40,3 +41,11 @@ grails-app/grails-app.iml
 web-app/WEB-INF/*
 *.iml
 out/*
+.idea/compiler.xml
+*.class
+*.js
+*.xml
+*.json
+classes/production/SocietySystem-grailsPlugins/uglifyjs/README.md
+SocietySystem.rar
+*.iml
